[56845] chore: code review